# template-analytics-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml
docs/: conf.py  index.rst
notebooks/.ipynb_checkpoints/: basic-template-checkpoint.ipynb
src/example_rg/: example.py
tests/: test_example_rg.py
