[build-system]
#requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_rg"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
addopts = "--cov=src.example_rg"

[tool.black]
line-length = 127
target-version = ['py311']

[tool.pylint.main]
# Specify a score threshold under which the program will exit with error.
fail-under = 3

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 127

	